Finished multicast and used InetAdress instead of InetSocketAdress.