@@ -16,21 +16,20 @@ import java.nio.file.Paths;
 import java.util.*;
 import java.util.concurrent.locks.ReadWriteLock;
 import java.util.concurrent.locks.ReentrantReadWriteLock;
-import java.util.stream.Collectors;
 
 public class ServerNode {
-    private final List<InetSocketAddress> neighbours;
-    private final Map<String, List<InetSocketAddress>> clientsResourceMap;
+    private final List<InetAddress> neighbours;
+    private final Map<String, List<InetAddress>> clientsResourceMap;
     private final Map<String, ReadWriteLock> resourceLocks;
-    private final Map<String, List<InetSocketAddress>> clientsBuildTree;
-    private final Map<String, List<InetSocketAddress>> bestNeighbours;
+    private final Map<String, List<InetAddress>> clientsBuildTree;
+    private final Map<String, List<InetAddress>> bestNeighbours;
     private final ReadWriteLock lock = new ReentrantReadWriteLock();
     private final ReadWriteLock lockTree = new ReentrantReadWriteLock();
     private final ReadWriteLock lockBestN = new ReentrantReadWriteLock();
 
     public ServerNode(String file) {
         try {
-            this.neighbours = Files.readAllLines(Paths.get(file)).stream().map(str -> new InetSocketAddress(str, Cods.portSOConnections)).collect(Collectors.toList());
+            this.neighbours = Files.readAllLines(Paths.get(file)).stream().map(str -> {try {return InetAddress.getByName(str);} catch (UnknownHostException e) {throw new RuntimeException(e);}}).toList();
         } catch (IOException e) {
             System.out.println("Erro a carregar os vizinhos");
             throw new RuntimeException(e);
@@ -43,8 +42,11 @@ public class ServerNode {
 
     public void addResource(String resource) {
         lock.writeLock().lock();
-        this.clientsResourceMap.put(resource, new ArrayList<>());
-        this.resourceLocks.put(resource,new ReentrantReadWriteLock());
+        if(!this.clientsResourceMap.containsKey(resource))
+        {
+            this.clientsResourceMap.put(resource, new ArrayList<>());
+            this.resourceLocks.put(resource,new ReentrantReadWriteLock());
+        }
         lock.writeLock().unlock();
     }
     public boolean hasResource(String resource) {
@@ -54,7 +56,7 @@ public class ServerNode {
         return r;
     }
 
-    public void addClient(String resource, InetSocketAddress client){
+    public void addClient(String resource, InetAddress client){
         lock.readLock().lock();
         if(this.clientsResourceMap.containsKey(resource)){
             resourceLocks.get(resource).writeLock().lock();
@@ -64,7 +66,7 @@ public class ServerNode {
         lock.readLock().unlock();
     }
 
-    public boolean removeClient(String resource, InetSocketAddress client){
+    public boolean removeClient(String resource, InetAddress client){
         boolean r = false;
         lock.writeLock().lock();
         if(this.clientsResourceMap.containsKey(resource)){
@@ -92,18 +94,18 @@ public class ServerNode {
         lock.writeLock().unlock();
         return res;
     }
-    public InetSocketAddress getNeighbour(int index) {
+    public InetAddress getNeighbour(int index) {
         return this.neighbours.get(index);
     }
     public int neighbourSize() {
         return this.neighbours.size();
     }
-    public List<InetSocketAddress> getNeighbours() {
+    public List<InetAddress> getNeighbours() {
         return neighbours;
     }
-    protected List<InetSocketAddress> getBestNeighbours(String resource) {
+    protected List<InetAddress> getBestNeighbours(String resource) {
         this.lockBestN.readLock().lock();
-        List<InetSocketAddress> bestneighbours = new ArrayList<>(this.bestNeighbours.get(resource));
+        List<InetAddress> bestneighbours = new ArrayList<>(this.bestNeighbours.get(resource));
         this.lockBestN.readLock().unlock();
         return bestneighbours;
     }
@@ -113,40 +115,42 @@ public class ServerNode {
         return ProtocolTransferContent.decapsulate(datagramPacket);
     }
     // Método que replica o conteudo recebido por todos os clientes
-    public List<InetSocketAddress> getClientList(StreamingPacket streamingPacket) {
+    public List<InetAddress> getClientList(StreamingPacket streamingPacket) {
         String resource = streamingPacket.getResource();
         lock.readLock().lock();
         resourceLocks.get(resource).readLock().lock();
-        List<InetSocketAddress> clients = new ArrayList<>(clientsResourceMap.get(resource));
+        List<InetAddress> clients = new ArrayList<>(clientsResourceMap.get(resource));
         resourceLocks.get(resource).readLock().unlock();
         lock.readLock().unlock();
         return clients;
     }
 
     public void multicast(StreamingPacket packet) throws IOException {
-        List<InetSocketAddress> clients = getClientList(packet);
-        Debug.printTask("A fazer multicast do recurso " + packet.getResource() + " para os clientes: " + clients.stream().map(i -> i.getAddress().getHostAddress()).toList());
+        List<InetAddress> clients = getClientList(packet);
+        Debug.printTask("A fazer multicast do recurso " + packet.getResource() + " para os clientes: " + clients.stream().map(InetAddress::getHostAddress).toList());
         Debug.printTask("A encapsular o pacote");
         DatagramPacket dp = ProtocolTransferContent.encapsulate(packet);
         Debug.printTask("Pacote encapsulado, DatagramPacket resultante: "+dp);
-        for (InetSocketAddress client : clients) {
+        for (InetAddress client : clients) {
             Debug.printTask("Criação de socket...");
-            DatagramSocket ds = new DatagramSocket(client.getPort(),client.getAddress());
-            Debug.printTask("Socket criado para a porta "+client.getPort() + " do cliente "+client.getAddress());
+            DatagramSocket ds = new DatagramSocket(Cods.portStreamingContent,client);
+            Debug.printTask("Socket criado para a porta "+ Cods.portStreamingContent + " do cliente "+ client.getHostAddress());
             Debug.printTask("Envio do datagrama");
             ds.send(dp);
             Debug.printTask("Datagrama enviado.");
             ds.close();
             Debug.printTask("Socket fechado.");
         }
+        if(packet.getType() == Cods.codEndStream)
+            this.removeResource(packet.getResource());
     }
 
-    public void sendRequest(InetSocketAddress neighbour, String resource, InetSocketAddress origin, int tid,Map<Integer,Long> responseTime) {
+    public void sendRequest(InetAddress neighbour, String resource, InetAddress origin, int tid,Map<Integer,Long> responseTime) {
         try {
-            String ip = neighbour.getAddress().getHostAddress();
+            String ip = neighbour.getHostAddress();
             Debug.printTask("A perguntar " + ip + " se tem o recurso " + resource);
             Long startTime = System.currentTimeMillis();
-            Socket socket = new Socket(neighbour.getAddress(), Cods.portSOConnections);
+            Socket socket = new Socket(neighbour, Cods.portSOConnections);
             DataInputStream dis = new DataInputStream(socket.getInputStream());
             DataOutputStream dos = new DataOutputStream(socket.getOutputStream());
             ProtocolBuildTree.encapsulateAsk(origin,resource,dos);
@@ -181,8 +185,8 @@ public class ServerNode {
         {
             int tid = 0;
             Map <Integer, Long> responseTime = new HashMap<>();
-            Map <Integer, InetSocketAddress> neighbourMap = new HashMap<>();
-            InetSocketAddress origin = hc.address();
+            Map <Integer, InetAddress> neighbourMap = new HashMap<>();
+            InetAddress origin = hc.address();
             // Se não tiver recurso ver se há situação de loop
             this.lockTree.writeLock().lock();
             if(!this.clientsBuildTree.containsKey(resource))
@@ -198,19 +202,19 @@ public class ServerNode {
                 this.lockTree.writeLock().unlock();
                 Debug.printTask("Não foi encontrado o recurso em memória, a contactar vizinhos");
                 List<Thread> list = new ArrayList<>();
-                for (InetSocketAddress neighbour : neighbours) {
+                for (InetAddress neighbour : neighbours) {
                     tid+=1;
                     neighbourMap.put(tid,neighbour);
                     int finalTid = tid;
-                    Debug.printTask("A contactar vizinho " + neighbour.getAddress().getHostAddress() + " a perguntar se tem o recurso " + resource);
+                    Debug.printTask("A contactar vizinho " + neighbour.getHostAddress() + " a perguntar se tem o recurso " + resource);
                     Thread t = new Thread(() -> sendRequest(neighbour, resource, origin, finalTid, responseTime));
                     t.start();
                     list.add(t);
                 }
                 for(Thread t : list)
                     t.join();
-                List<InetSocketAddress> sortedNeighbours = responseTime.entrySet().stream().sorted(Map.Entry.comparingByValue()).map(Map.Entry::getKey).map(neighbourMap::get).toList();
-                Debug.printTask("Vizinhos ordenados: " + sortedNeighbours.stream().map(i -> i.getAddress().getHostAddress()).toList());
+                List<InetAddress> sortedNeighbours = responseTime.entrySet().stream().sorted(Map.Entry.comparingByValue()).map(Map.Entry::getKey).map(neighbourMap::get).toList();
+                Debug.printTask("Vizinhos ordenados: " + sortedNeighbours.stream().map(InetAddress::getHostAddress).toList());
                 if(!sortedNeighbours.isEmpty()) {
                     System.out.println("Encontrou vizinhos com recursos. Responder com código " + ProtocolBuildTree.found);
                     res = ProtocolBuildTree.found;
@@ -250,12 +254,12 @@ public class ServerNode {
             throw new RuntimeException(e);
         }
     }
-    private boolean contactNeighbourStartStreaming(InetSocketAddress neighbour, String resource) {
+    private boolean contactNeighbourStartStreaming(InetAddress neighbour, String resource) {
         boolean sucess = false;
         try {
-            String ip = neighbour.getAddress().getHostAddress();
+            String ip = neighbour.getHostAddress();
             Debug.printTask("A contactar vizinho " + ip  + " para o recurso " + resource);
-            Socket socket = new Socket(neighbour.getAddress(), Cods.portStartStreaming);
+            Socket socket = new Socket(neighbour, Cods.portStartStreaming);
             DataOutputStream dos = new DataOutputStream(socket.getOutputStream());
             ProtocolStartStreaming.encapsulate(resource,dos);
             socket.close();
@@ -273,9 +277,10 @@ public class ServerNode {
             String resource = ProtocolStartStreaming.decapsulate(dis);
             socket.close();
             Debug.printTask("A adicionar cliente " + ips + " para streaming do conteudo " + resource);
-            this.addClient(resource,new InetSocketAddress(socket.getInetAddress(),Cods.portStreamingContent));
-            List<InetSocketAddress> bestneighbours = this.getBestNeighbours(resource);
-            Debug.printTask("Vizinhos que a contactar :" + bestneighbours.stream().map(ip -> ip.getAddress().getHostAddress()).toList());
+            this.addResource(resource);
+            this.addClient(resource,socket.getInetAddress());
+            List<InetAddress> bestneighbours = this.getBestNeighbours(resource);
+            Debug.printTask("Vizinhos que a contactar :" + bestneighbours.stream().map(InetAddress::getAddress).toList());
             boolean sucess = false;
             for(int i = 0; i < bestneighbours.size() && !sucess; i++)
                 sucess = contactNeighbourStartStreaming(bestneighbours.get(i),resource);
@@ -289,20 +294,23 @@ public class ServerNode {
         }
     }
 
-    public void serverRequest(ServerSocket serverSocket) {
-        try {
+    private void serverRequest() {
+        try(ServerSocket serverSocket = new ServerSocket(Cods.portSOConnections))
+        {
             while (true) {
                 Socket clientSocket = serverSocket.accept();
                 Thread t1 = new Thread(() -> respondeRequest(clientSocket));
                 t1.start();
             }
-        }catch (IOException e) {
+        }
+        catch (IOException e) {
             throw new RuntimeException(e);
         }
     }
 
-    public void serverStartStreaming(ServerSocket serverSocket) {
-        try {
+    private void serverStartStreaming() {
+        try(ServerSocket serverSocket = new ServerSocket(Cods.portStartStreaming))
+        {
             while (true) {
                 Socket clientSocket = serverSocket.accept();
                 Thread t1 = new Thread(() -> startStreaming(clientSocket));
@@ -312,10 +320,26 @@ public class ServerNode {
             throw new RuntimeException(e);
         }
     }
-
-    public void initServer() throws IOException {
-        Thread taux =  new Thread(() -> {try { serverRequest(new ServerSocket(Cods.portSOConnections));} catch (IOException e) {throw new RuntimeException(e);}});
-        taux.start();
-        serverStartStreaming(new ServerSocket(Cods.portStartStreaming));
+    private void serverMulticast() {
+        try (DatagramSocket socket = new DatagramSocket(Cods.portStreamingContent))
+        {
+            byte[] buffer = new byte[20000];
+            while (true) {
+                DatagramPacket receivePacket = new DatagramPacket(buffer, buffer.length);
+                socket.receive(receivePacket);
+                StreamingPacket packet = this.receiveResources(receivePacket);
+                this.multicast(packet);
+            }
+        }
+        catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+    }
+    public void initServer(){
+        Thread taux1 =  new Thread(this::serverRequest);
+        Thread taux2 =  new Thread(this::serverMulticast);
+        taux2.start();
+        taux1.start();
+        serverStartStreaming();
     }
 }
